src/objects/Case_Contact__c.object
<CustomObject>
    <description>Contact details of the  Individual referred in STADD Program.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Referral_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>Contact_Person_First_Name__c &amp; &quot; &quot; &amp; Contact_Person_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Cell_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Email_Address__c</fullName>
        <encrypted>true</encrypted>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_First_Name__c</fullName>
        <description>The last name of the person to contact about the case</description>
        <encrypted>true</encrypted>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Home_Phone_Extension__c</fullName>
        <description>Phone number extension if required</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Phone number extension if required</inlineHelpText>
        <label>Home Phone Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Home_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>You need to enter at least one phone number</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Profession_Role__c</fullName>
        <encrypted>true</encrypted>
        <label>Profession / Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Work_Phone_Extension__c</fullName>
        <description>Case contact&apos;s work phone extension</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Work Phone extension (if required)</inlineHelpText>
        <label>Work Phone Extension</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Work_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Subtype__c</fullName>
        <inlineHelpText>Choose only if Contact Type is &quot;Organizational&quot;</inlineHelpText>
        <label>Contact Subtype</label>
        <picklist>
            <controllingField>Contact_Type__c</controllingField>
            <picklistValues>
                <fullName>CFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Authority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Contacts</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_note__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>Date of when the contact became inactive</description>
        <inlineHelpText>Date of when the contact became inactive</inlineHelpText>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a contact is inactive</description>
        <inlineHelpText>Checked if a contact is inactive</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_City__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line1__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line2__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Postal_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Province__c</fullName>
        <label>Mailing Address Province</label>
        <picklist>
            <picklistValues>
                <fullName>BC</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Regional Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Relationship__c</fullName>
        <inlineHelpText>Only required if Relationship above = “Other ”</inlineHelpText>
        <label>Relationship to Individual (if other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Invite_Date__c</fullName>
        <description>Portal Invite Date</description>
        <label>Portal Invite Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Portal Invite</description>
        <inlineHelpText>Check this field if you want an email to be sent to the case contact with instruction to register to the application (i.e. if they are not portal users already).</inlineHelpText>
        <label>Portal Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <formula>Referral__r.Primary_Contact_Is_Individual_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimaryContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Identifying_Number__c</fullName>
        <label>Professional Identifying Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Case Contacts</relationshipLabel>
        <relationshipName>Referral_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Subtype__c</fullName>
        <label>Relationship to Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC (Community Living BC) Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA (Delegated Aboriginal Agency)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFD (Children and Family Development)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indicator that marks if the Case Contact is a Support Team Member.</description>
        <label>Support Team Member</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Case Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_only_when_email_present</fullName>
        <active>true</active>
        <description>Check only when email present</description>
        <errorConditionFormula>AND( Portal_Invite__c ,(IF((Contact_Person_Email_Address__c == null), TRUE , false)))</errorConditionFormula>
        <errorDisplayField>Portal_Invite__c</errorDisplayField>
        <errorMessage>Checkbox can only be checked if Email Address exists already</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_formatting</fullName>
        <active>false</active>
        <description>Phone number formatting</description>
        <errorConditionFormula>NOT(REGEX( Contact_Person_Home_Phone_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Contact_Person_Home_Phone_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relationship_Type_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(Other_Relationship__c) , ISPICKVAL( Relationship_Subtype__c , &apos;Other&apos;))</errorConditionFormula>
        <errorDisplayField>Other_Relationship__c</errorDisplayField>
        <errorMessage>Please specify the Other Relationship</errorMessage>
    </validationRules>
</CustomObject>